# customercare_aiaas

./: .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
joji/: __init__.py
joji/chat/: __init__.py  app.py
joji/portal/: __init__.py  db.py  main_page.py
joji/portal/pages/: 1_create_project.py  2_upload_doc.py  3_view_embeddings.py
sample/: citation.md  troubleshooting-guide.md
